# sentiment-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATA.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  evaluate.py  pyproject.toml  repair_metrics.py  requirements.backup.txt  requirements.lock.txt  requirements.txt  show_metrics.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml
api/: main.py
app/: app.py
data/: README.txt  domain_stopwords.txt
docs/adr/: 0001-model-choice.md  0002-threshold-and-calibration.md
notebooks/: sentiment_analysis.ipynb
outputs/: cv_metrics.csv  cv_summary.json
report/: report.md
scripts/: dataset_stats.py  map_cols.py  smoke.py
src/: config.py  cv.py  evaluate.py  evaluate.py.save  inspect.py  inspect_artifacts.py  predict.py  preprocess.py  threshold.py  train.py  tune.py  utils.py
tests/: test_api.py  test_imports.py  test_mapping.py  test_predict.py  test_train_small.py
